--- a/_posts/2022-09-13-post1.md
+++ b/_posts/2022-09-13-post1.md
@@ -2,10 +2,7 @@
 layout: post
 title:  "A Brief Intro to Machine Learning"
 color: rgb(29, 130, 130)
-feature-img: "assets/img/feature-img/swirl.png"
-#thumbnail: "assets/img/thumbnails/feature-img/swirl.jpeg"
-#feature-img: "assets/img/feature-img/blog-image.jpeg"
-#thumbnail: "assets/img/thumbnails/feature-img/blog-image.jpeg"
+feature-img: "assets/img/blogimage.png"
 date:   2023-09-12
 author: Lucy Storts
 tags: [Statistics]
